--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -3,7 +3,7 @@
 		<ul class="social">
 			<li class="twitter"><a href="http://www.twitter.com/{{site.twitter_username}}">twitter.com/{{site.twitter_username}}</a></li>
 			<li class="email"><a href="mailto:{{site.email}}">{{site.email}}</a></li>
-			<li class="cc"><a title="This work is licensed under a Creative Commons Attribution 3.0 License." rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" src="css/images/retina/cc_logo.png" height="32" width="94"></a></li>
+			<li class="cc"><a title="This work is licensed under a Creative Commons Attribution 3.0 License." rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" src="/images/retina/cc_logo.png" height="32" width="94"></a></li>
 		</ul>
 		<ul class="contact">
 			<li>© 2014 webmeadow</li>
