--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -8,7 +8,7 @@
 	{% endfor %}
 </nav>
 <div class="wrapper">
-	<h1 id="logo"><img src="css/images/logo.png" alt="{{ site.title }}"></h1>
+	<h1 id="logo"><img src="/images/logo.png" alt="{{ site.title }}"></h1>
 	<h2 id="site-slogan">{{site.slogan}}</h2>
 </div>
 </header>
