--- a/jekyll/_sass/_layout.scss
+++ b/jekyll/_sass/_layout.scss
@@ -17,7 +17,7 @@
 }
 // Strategists
 // This creates the vertical line
-#page:after {
+.mainPage:after {
   content: "";
   position: absolute;
   z-index: 0;
