--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -6,7 +6,7 @@
 			<li class="cc"><a title="This work is licensed under a Creative Commons Attribution 3.0 License." rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" src="/images/retina/cc_logo.png" height="32" width="94"></a></li>
 		</ul>
 		<ul class="contact">
-			<li>© 2014 webmeadow</li>
+			<li>© {{ site.time | date: '%Y' }} webmeadow</li>
 			<li><em>Call:</em>{{site.phone}}</li>
 			<li><em>Write:</em> {{site.address}}</li>
 		</ul>
