--- a/_includes/homepage/presentations.html
+++ b/_includes/homepage/presentations.html
@@ -1,3 +1,20 @@
-<section id="blog">
-	<h3>Check out our <a href="/presentations">presentation archive</a> for slides and transcripts.</h3>
+<section id="transcripts">
+	<h2>Read our Presentation transcripts:</h2>
+	<div class="wrapper">
+	<ul class="post-list">
+    {% for post in site.posts limit:4 %}
+      <li>
+            <figure class="post-extract">
+				<img src="/images/presentations/{{ post.thumbnail }}">
+				<div class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</div>
+				<figcaption>
+				    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+				</figcaption>
+            </figure>
+      </li>
+    {% endfor %}
+  </ul>
+    <p class="archive-link"><a href="presentations/" title="Presentations archive">See the full archive of transcripts</a></p>
+	</div>
+
 </section>
