--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 bodyClass: blog
+slogan: {{ page.title }}
 ---
-<div class="subheader-image">
-	<img src="/images/blog/{{ page.subheader }}">
-</div>
+
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
@@ -13,3 +12,5 @@ bodyClass: blog
     {{ content }}
   </article>
 </div>
+
+
