--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,86 +1,101 @@
 
 
-section#transcripts {
-    ul {
-        display:flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        align-items: stretch;
-        align-content: flex-start;
+section#meet {
+    ul.post-list {
         margin:0;
         padding:0;
 
-    }
-    li { width: 90%;
-        margin: 2px;
-        background-color: $lighter-grey;
-        padding:5px;
-        font-size: .75em;
-         @include breakpoint($break-mobile) {
-          width: 48%;
-          margin: 3px;
-        }
-        @include breakpoint("820px") {
-          width: 30%;
-          margin: 5px;
-        }
 
+        li {
+            margin:0;
+            padding:5px;
+            font-size: .75em;
+            color: $grey;
+            background: none;
+            max-width: 11em;
 
-        figure {
-            position:relative;
-            padding-top:1.5em;
-
-
-            .post-meta {
-                position:absolute;
-                top:0;
-
-                width:100%;
-                height:1.5em;
-
-            }
-
-            figcaption {
-                font-size:.75em;
-
+            figure {
+                position:relative;
+                padding-top:1.5em;
                 a {
-                    font-weight: bold;
-                    text-decoration: none;
-                    font-size: .9em;
+                    display:block;
+                    width:100%;
+                    img {
+                        width:100%;
+                    }
+                }
+
+                figcaption {
+                    display:inline-block;
+
+                    text-align: left;
+                    vertical-align: top;
+                    section {
+                        padding:0;
+                    }
+                    a {
+                        font-weight: bold;
+                        max-width: 100%;
+                    }
                 }
             }
         }
-    }
+        @include breakpoint($break-mobile) {
+            li {
+              margin: 0 2em;
 
+              figure {
+                  a {
+                      display:inline-block;
+                      max-width: 40%;
+                      img {
+                         max-height: 200px;
+                         margin:0 0.5em 0.5em 0;
+                      }
+                  }
 
-}
-p.archive-link {
-        text-align: center;
-        font-size: .9em;
-        margin:1.25em 0;
-
-        a {
-            font-weight: bold;
-            text-decoration: none;
-            font-size: .9em;
+                  figcaption {
+                     max-width: 60%;
+                  }
+              }
+            }
         }
     }
 
+
+    p.archive-link {
+        text-align: center;
+        font-size: .9em;
+        margin:1.25em 0;
+        border:0;
+        padding:0;
+
+        a {
+            font-weight: bold;
+            font-size: .9em;
+        }
+    }
+}
 .blog{
 
-
-  #site-slogan {
-    display: none;
-  }
   .post{
-    max-width: 950px;
+    width:calc(100% - 0.2em);
+    padding:0.2em;
+    min-height:600px;
+    padding-bottom:50px;
     text-align: left;
     margin: 0 auto;
-    min-height:600px;
-    padding-bottom:100px;
+
   }
+  @include breakpoint($break-mobile) {
+    .post {
+        max-width: 950px;
+
+        padding-bottom:100px;
+    }
+ }
   h1,
-  h1.post-title{
+  h1.post-title, {
     color: #515F22;
     font-style: italic;
     font-family: "Droid Serif", Georgia, "Times New Roman", Times, Baskerville, serif;
@@ -98,27 +113,33 @@ p.archive-link {
       padding: 20px 0;
       border-top: 2px dashed #d5cbae;
       font-size: .9em;
+      clear:left;
       &:first-child {
         border:none;
       }
 
-      img {width:200px;
-          height:auto;
-          display: inline-block;
+      img {
+          width: 100%;
+          margin:0.25em 0;
+      }
+
+      @include breakpoint($break-mobile) {
+          img {width:200px;
+              height:auto;
+              vertical-align: top;
+              margin:0 0.5em 1em 0;}
+       }
+      .post-info {
           vertical-align: top;
-          margin-top:0.25em;}
-    .post-info{
-    display: inline-block;
-    width: calc(100% - 220px);
-    padding-left: 20px;
-    }
+      }
       .post-meta{
         font-size: .9em;
       }
-      h2 {
-        margin: 0.5em 0 0.25em 0;
+      h3 {
+        margin: 0 0 0.25em 0;
         font-size: 1.2em;
         font-family: "Trebuchet MS","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif;
+        vertical-align: top;
         a {
           text-decoration: none;
           font-style: normal;
