--- a/_includes/homepage/presentations.html
+++ b/_includes/homepage/presentations.html
@@ -1,23 +1,7 @@
 
 
 	<div class="wrapper">
-    	<h2>Slides &amp; Transcripts:</h2>
-    	<ul class="post-list">
-        {% for post in site.posts limit:1 %}
-           <li>
-                <figure>
-				    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}"><img src="/images/presentations/{{ post.thumbnail }}"></a>
-                    <figcaption class="post-info">
-                        <h2>
-                            <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-    	                </h2>
-                        <section class="excerpt">{{post.excerpt | strip_html }}</section>
-                    </figcaption>
-                </figure>
-            </li>
-        {% endfor %}
-      </ul>
-    <p class="archive-link"><a href="presentations/" title="Presentations archive">See the full archive of Slides &amp; Transcripts</a></p>
+    <h2 class="archive-link"><a href="presentations/" title="Presentations archive">See our full archive of Slides &amp; Transcripts</a></h2>
 	</div>
 
 </section>
