--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -85,6 +85,7 @@ section#meet {
     padding-bottom:50px;
     text-align: left;
     margin: 0 auto;
+	font-size: 0.95em;
 
   }
   @include breakpoint($break-mobile) {
@@ -103,6 +104,11 @@ section#meet {
   }
   h1 {
   	margin-bottom:15px;
+  }
+  h2 .post-link{
+  	color: #715a3e;
+	font-style:normal;
+	font-size: .95em;
   }
   .post-list {
   	padding-left: 0;
