--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -130,7 +130,7 @@ var {
 }
 
 // Site Logo
-h1#logo {
+#logo {
   max-width: 493px;
   padding: 0;
   margin: 0 auto;
@@ -858,18 +858,12 @@ p.top-link {
     display:block;
     width:100%;
     margin:0.5em 0;
+	padding: 0 0.5em;
     font-size: 0.65em;
     text-align: right;
     font-style: italic;
 
     a {
         text-decoration: none;
-    }
-}
-
-@include breakpoint($break-mobile) {
-    p.top-link {
-        width:950px;
-        margin:0.5em auto;
     }
 }
