Uploading Eileen's local changes.

--- a/_includes/homepage/conferences.html
+++ b/_includes/homepage/conferences.html
@@ -1,7 +1,8 @@
 <section id="meet">
- 	<h2>Meet us at:</h2>
+	<!-- update this data in _data/current_conferences.yml -->
+ 	<!-- 
+		<h2>Meet us at:</h2>
 	<div class="wrapper">
-		<!-- update this data in _data/current_conferences.yml -->
 		<ul>
 			{% for conference in site.data.current_conferences %}
 				<li class="column highest">
@@ -12,5 +13,5 @@
 				</li>
 			{% endfor %}
 		</ul>
-	</div>
+	</div> -->
 
