--- a/_includes/homepage/strategists.html
+++ b/_includes/homepage/strategists.html
@@ -20,14 +20,14 @@
 		<div class="column left">
 			<img title="Aaron" alt="Aaron's Headshot" class="headshot" src="/images/retina/aaron.png">
 			<h3>Aaron</h3>
-			<p>Aaron takes pride in assembling the perfect team for your needs and keeping all the moving parts organized and heading towards your goals.</p>
+			<p>Aaron takes pride in solving the technical puzzles around getting your project built, from planning all the way to a sensible, flexible implementation.</p>
 			<a class="twitter" href="http://www.twitter.com/{{site.aaron_twitter}}">@{{site.aaron_twitter}}</a><br>
 			<a class="email" href="mailto:{{site.aaron_email}}">{{site.aaron_email}}</a>
 		</div>
 		<div class="column right">
 			<img title="Eileen" alt="Eileen's Headshot" class="headshot" src="/images/retina/eileen.png">
 			<h3>Eileen</h3>
-			<p>Eileen likes taking a big ol' mess of content and turning it into something structured, sensible, and flexible.</p>
+			<p>Eileen likes helping your team understand the bigger picture behind the work, and finding the most effective way to use your website to reach organizational goals.</p>
 			<a class="twitter" href="http://www.twitter.com/{{site.twitter_username}}">@{{site.twitter_username}}</a><br>				
 			<a class="email" href="mailto:{{site.eileen_email}}">{{site.eileen_email}}</a>
 		</div>
