--- a/_includes/homepage/about-us.html
+++ b/_includes/homepage/about-us.html
@@ -1,5 +1,5 @@
 	<section id="about-us">
 		<div class="wrapper">
-			<p>We're located on a small farm in northern New Hampshire, and our offices are entirely solar-powered. We keep a flock of ducks, geese, and chickens; they are hilarious and only really loud when we are trying to sound professional on conference calls.</p>
+			<p>We're located on a small farm in southern Maine, and our offices are solar-powered. We keep a flock of ducks, rabbits, and chickens; they are hilarious and only really loud when we are trying to sound professional on conference calls.</p>
 		</div>
 	</section>
