--- a/_includes/homepage/worked-with.html
+++ b/_includes/homepage/worked-with.html
@@ -2,12 +2,13 @@
 	<h2>We've worked with:</h2>
 	<div class="wrapper">
 		<ul>
-			<li class="mariott">Marriott</li>
-			<li class="ritz">The Ritz-Carlton</li>
-			<li class="cineplex">Cineplex</li>
-			<li class="trek">Trek</li>
-			<li class="papa">Papa John's</li>
+			<li class="shriver">Shriver Center</li>
+			<li class="kidney">National Kidney Foundation</li>
 			<li class="ala">A List Apart</li>
+			<li class="fws">US Fish & Wildlife Service</li>
+			<li class="jj">Johnson & Johnson</li>
+			<li class="trek">Trek</li>
+			
 		</ul>
 	</div>
 </section><!-- /worked-with -->
